# cpp_otus

./: .gitignore  README.md
.github/workflows/: hw2.yml  release_hw2.yaml
hw1/: CMakeLists.txt  test_version.cpp
hw2/: CMakeLists.txt
hw2/src/: filter_ip_lib.h  ip.h  ip_address.h  ip_filter.cpp  ip_filter.h  main.cpp
hw2/tests/: CMakeLists.txt  test_filter_ip.cpp
